[project]
name = "fabric-image-retrieval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.12"
dependencies = [
    "numpy>=2.0.2",
    "opencv-python>=4.13.0.92",
    "scikit-learn>=1.6.1",
    "torch==2.1.1",
]

[tool.uv.sources]
torch = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://mirror.sjtu.edu.cn/pytorch-wheels/cu121"
explicit = true
